6761744: Hotspot crashes if process size limit is exceeded Summary: Check overflow of total_reserved: object heap + perm gen (+ miscellaneous data structures) before reserving heap space, and VM aborts with appropriate message if overflowed. Reviewed-by: brutisso, johnc, tschatzl Contributed-by: tamao <tao.mao@oracle.com>